# CVTRemesh

./: CMakeLists.txt  CMakeOptions.txt  INSTALL_WIN.txt  PROJECT_ROOT  configure.bat  configure.sh
Geex/: CMakeLists.txt
Geex/CVT/: AABB_tree_cgal.h  custom_rvd.h  delaunay.cpp  delaunay.h  geometry.h  regular_CGAL.cpp  regular_CGAL.h  topo_poly_mesh.cpp  topo_poly_mesh.h
Geex/basics/: line_stream.h
Geex/combinatorics/: map_combels.cpp  map_combels.h  map_curvature.cpp  map_curvature.h  map_editor_ext.cpp  map_utility.cpp  map_utility.h
Geex/graphics/: geexapp.h  geexob.h
Geex/mathematics/: box.h
glut-win32/include/GL/: glut.h
glut-win32/lib/: glut64.lib
gx_mccvt/: CMakeLists.txt  cvt.cpp  cvt.h  cvt_compute.h  cvt_geometry.h  cvt_graphics.cpp  cvt_graphics.h  cvt_multithread.cpp  cvt_multithread.h  cvt_primal.h  delaunay_cvt.cpp  delaunay_cvt.h  delaunay_io.cpp  delaunay_io.h  main.cpp
mesh_stats/: logstats.py  merge.py  obj2pts.py  stats.py  stats_quad.py  使用方法.txt
