
IF(WIN32)
	# Od : no optimisation; Ot: favor code speed over code size.
	if(DO_NOT_OPTIMIZE_WINDOWS_RELEASE)
		SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Od /Ot")
	endif(DO_NOT_OPTIMIZE_WINDOWS_RELEASE)
ELSE(WIN32)
	# CGAL needs rounding math to compile well with GCC
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -frounding-math")
ENDIF(WIN32)

AUX_SOURCE_DIRECTORY(. SUB_SOURCES)
#AUX_SOURCE_DIRECTORY(rvd SUB_SOURCES)
SET(SOURCES ${SOURCES} ${SUB_SOURCES})
file(GLOB HeaderFiles *.h)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/gx_mccvt)

IF (WIN32)
   INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/glut-win32/include)
   LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/glut-win32/lib)
   ADD_EXECUTABLE(gx_mccvt ${SOURCES}  ${HeaderFiles})
ELSE (WIN32)
   LINK_DIRECTORIES(/usr/X11R6/lib)
   ADD_EXECUTABLE(gx_mccvt ${SOURCES}  ${HeaderFiles})
ENDIF (WIN32)

ADD_DEPENDENCIES(gx_mccvt geex)

ADD_DEFINITIONS(-DNOMINMAX) 

IF (WIN32)
   TARGET_LINK_LIBRARIES(gx_mccvt geex opengl32 glu32)
   SET_TARGET_PROPERTIES(gx_mccvt PROPERTIES COMPILE_FLAGS "/openmp")
   SET_TARGET_PROPERTIES(gx_mccvt PROPERTIES LINK_FLAGS "/FORCE:MULTIPLE /LARGEADDRESSAWARE")
ELSE (WIN32)
   TARGET_LINK_LIBRARIES(gx_mccvt geex  geex glut GL GLU CGAL gomp)
   SET_TARGET_PROPERTIES(gx_mccvt PROPERTIES COMPILE_FLAGS "-fopenmp")
ENDIF (WIN32)
